更新热键处理

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,8 @@ set(PROJECT_SOURCES
     src/translator.cpp
     src/windowstraymanager.h
     src/windowstraymanager.cpp
+    src/hotkeymanager.h
+    src/hotkeymanager.cpp
     resource.qrc
     icon.rc
 )
